changed some folders around, added malt icons and temp drop files

--- a/player.config
+++ b/player.config
@@ -134,8 +134,8 @@
       { "item" : "stocking2" },
       { "item" : "undecoratedtree" },
 
-      // Brewing stuff
-      { "item" : "woodenbrewingstation" }
+      // brewing stuff
+      {"item" : "brewingstation" }
     ],
     "tier2" : [
       { "item" : "silverarmorhead" },
