added a light lager recipe

--- a/player.config
+++ b/player.config
@@ -135,7 +135,8 @@
       { "item" : "undecoratedtree" },
 
       // brewing stuff
-      {"item" : "brewingstation" }
+      { "item" : "brewingstation" },
+      { "item" : "lightlager" }
     ],
     "tier2" : [
       { "item" : "silverarmorhead" },
